# rocketrs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/plan/: 2026-05-27-implementation.md
docs/spec/: rocket-crate-specification.md
example-app/: Cargo.toml  README.md
example-app/src/: main.rs
example-app/src/routes/: demo.rs  documents.rs  errors.rs  mod.rs  render.rs
example-app/static/: index.html
src/: errors.rs  fairing.rs  headers.rs  lib.rs  state.rs  tracing_bridge.rs
src/responses/: mod.rs  pdf.rs  preview.rs  redirect.rs
tests/: fairing_invalid_config.rs  fairing_state.rs  integration_render.rs  smoke.rs  state_bounds.rs  unit_error_responder.rs  unit_headers.rs  unit_pdf_response.rs  unit_preview_response.rs  unit_redirect_response.rs  unit_tracing_bridge.rs
